Add About/Experience toggles; remove 3D nav

--- a/src/index.css
+++ b/src/index.css
@@ -51,3 +51,12 @@
     display: none;
   }
 }
+
+@layer utilities {
+  .line-clamp-4 {
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 4;
+  }
+}
